app/elasticsearch.yml
apiVersion: v1
kind: Namespace
metadata:
  name: elastic
  labels:
    app.kubernetes.io/name: elastic
    app.kubernetes.io/instance: elastic
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: elastic
  labels:
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/part-of: elk
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: elasticsearch
      app.kubernetes.io/part-of: elk
      app.kubernetes.io/version: 8.2.3
  serviceName: elasticsearch
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: elasticsearch
        app.kubernetes.io/part-of: elk
        app.kubernetes.io/version: 8.2.3
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:8.2.3
          ports:
            - name: http
              containerPort: 9200
            - name: transport
              containerPort: 9300
          volumeMounts:
            - name: es-data
              mountPath: /usr/share/elasticsearch/data
            - name: es-config
              mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
              subPath: elasticsearch.yml
      volumes:
        - name: es-config
          configMap:
            name: elasticsearch
  volumeClaimTemplates:
    - metadata:
        name: es-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: elastic
  labels:
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/part-of: elk
spec:
  selector:
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/part-of: elk
  ports:
    - name: http
      port: 9200
      targetPort: 9200
    - name: transport
      port: 9300
      targetPort: 9300
