app/logstash.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: elastic
  labels:
    app.kubernetes.io/name: logstash
    app.kubernetes.io/part-of: elk
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: logstash
      app.kubernetes.io/part-of: elk
      app.kubernetes.io/version: 8.2.3
  template:
    metadata:
      labels:
        app.kubernetes.io/name: logstash
        app.kubernetes.io/part-of: elk
        app.kubernetes.io/version: 8.2.3
    spec:
      containers:
        - name: logstash
          image: docker.elastic.co/logstash/logstash:8.2.3
          ports:
            - name: beats
              containerPort: 5044
            - name: tcp
              containerPort: 5000
          volumeMounts:
            - name: logstash
              mountPath: /usr/share/logstash/config/logstash.yml
              subPath: logstash.yml
            - name: logstash
              mountPath: /usr/share/logstash/pipeline/logstash.conf
              subPath: logstash.conf
      volumes:
        - name: logstash
          configMap:
            name: logstash
---
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: elastic
  labels:
    app.kubernetes.io/name: logstash
    app.kubernetes.io/part-of: elk
spec:
  selector:
    app.kubernetes.io/name: logstash
    app.kubernetes.io/part-of: elk
  ports:
    - name: tcp
      port: 5000
      targetPort: 5000
    - name: beats
      port: 5044
      targetPort: 5044
